--- a/pdf-llm-trainer/frontend/admin.html
+++ b/pdf-llm-trainer/frontend/admin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ASFC - Admin Panel</title>
+    <title>AFSC - Admin Panel</title>
   </head>
   <body>
     <div id="admin-app"></div>
